--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -1,27 +1,36 @@
 {% extends 'main_header.html' %}
 {% block body %}
+<div class="page-title-bar">
+    {% import 'block_enable_auto_refresh.html' as block_enable_refresh %}
+    {{ block_enable_refresh.enable_auto_refresh() }}
+</div>
+
+<div class="grid-container u-max-full-width">
     {# active_mx_page is declared in the main_header.html#}
     {% set mx_trees = details.mx_page_trees(active_mx_page[0]) %}
+    <!-- NOTE: data is requested from mx/views.py -->
     {%- for tree_name, tree_obj in mx_trees.items() %}
-        <div class="grid-container">
-            <div id="grid-header-{{ tree_name }}" class="grid-header"></div>
-            {% for process_name in tree_obj.sorted_process_names %}
-            <div id="grid-header-{{ process_name }}" class="grid-header"></div>
-            {%- endfor %}
-        </div>
-        <div class="grid-container spacer">
-            <div id="grid-info-{{ tree_name }}" class="grid-info"></div>
-            {% for process_name in tree_obj.sorted_process_names %}
-            <div id="grid-info-{{ process_name }}" class="grid-info context-menu"></div>
-            {%- endfor %}
-        </div>
-    {% endfor -%}
+    <h5>{{tree_name}}</h5>
+    <div class="grid-row grid-row-{{ tree_name }}">
+        <div id="grid-header-{{ tree_name }}" class="grid-header"></div>
+        {% for process_name in tree_obj.sorted_process_names %}
+        <div id="grid-header-{{ process_name }}" class="grid-header"></div>
+        {%- endfor %}
 
+        <div id="grid-info-{{ tree_name }}" class="grid-info"></div>
+        {% for process_name in tree_obj.sorted_process_names %}
+        <div id="grid-info-{{ process_name }}" class="grid-info context-menu"></div>
+        {%- endfor %}
+    </div>
+    {% endfor -%}
+</div>
 {% import 'block_context_menu.html' as context_menu %}
 {{ context_menu.job_menu() }}
 
 <script type="text/javascript">
-    var mx_trees = {{ details.mx_page_trees(active_mx_page[0])|jsonify|safe }};
+    var mx_trees = {{ details.mx_page_trees(active_mx_page[ 0 ]) | jsonify | safe }}
+    let treeSite = mx_trees.tree_site
+    let treeClient = mx_trees.tree_client
 </script>
 <script type="text/javascript" src="{{ url_for('static', file='js/tiles.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', file='js/mx_page.js') }}"></script>
