--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -28,9 +28,7 @@
 {{ context_menu.job_menu() }}
 
 <script type="text/javascript">
-    var mx_trees = {{ details.mx_page_trees(active_mx_page[ 0 ]) | jsonify | safe }}
-    let treeSite = mx_trees.tree_site
-    let treeClient = mx_trees.tree_client
+    var mx_trees = {{ details.mx_page_trees(active_mx_page[0]) | jsonify | safe }};
 </script>
 <script type="text/javascript" src="{{ url_for('static', file='js/tiles.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', file='js/mx_page.js') }}"></script>
