--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -22,7 +22,6 @@
         </thead>
         <tbody>
 
-
             {%- for row in details.managed_entries -%}
             {%- set tr_class = '' -%}
             {%- if row.is_on != row.is_alive -%}
@@ -41,18 +40,17 @@
                     <form class="table-form" method="POST" action="/managed/entry/interval/">
                         <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                         <input type="hidden" name="timeperiod" value="NA" />
-                        <input type="text" size="8" maxlength="32" name="interval"
-                            value="{{ row.trigger_frequency }}" />
-                        <button type="submit" title="Apply" class="action_button btn-center"><i
-                                class="fa fa-bolt"></i><span>Apply</span></button>
+                        <input type="text" size="8" maxlength="32" name="interval" value="{{ row.trigger_frequency }}" />
+                        <button type="submit" title="Apply" class="action_button btn-center">
+                            <i class="fa fa-bolt"></i><span>Apply</span></button>
                     </form>
                 </td>
                 <td>
                     <form class="table-form" method="POST" action="/managed/entry/trigger/">
                         <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                         <input type="hidden" name="timeperiod" value="NA" />
-                        <button type="submit" class="action_button btn-center" title="Trigger"><i
-                                class="fa fa-bolt"></i><span>Trigger</span></button>
+                        <button type="submit" class="action_button btn-center" title="Trigger">
+                            <i class="fa fa-bolt"></i><span>Trigger</span></button>
                     </form>
                 </td>
                 <td>{{ row.next_run_in }}</td>
@@ -72,15 +70,15 @@
                     <span class="inline u-pull-right">
                         <form class="table-form inline" method="GET" action="/gc/flush/all/"
                             onsubmit="refreshWithDelay()">
-                            <button type="submit" class="action_button btn-center inline" title="Flush All"><i
-                                    class="fa">&#xf1b8;</i><span>Flush All</span></button>
+                            <button type="submit" class="action_button btn-center inline" title="Flush All">
+                                <i class="fa">&#xf1b8;</i><span>Flush All</span></button>
                         </form>
                     </span>
                     <span class="inline u-pull-right">
                         <form class="table-form inline" method="GET" action="/gc/refresh/"
                             onsubmit="refreshWithDelay()">
-                            <button type="submit" class="action_button btn-center inline" title="Refresh"><i
-                                    class="fa">&#xf021;</i><span>Refresh</span></button>
+                            <button type="submit" class="action_button btn-center inline" title="Refresh">
+                                <i class="fa">&#xf021;</i><span>Refresh</span></button>
                         </form>
                     </span>
                 </th>
@@ -107,8 +105,8 @@
                     <form class="table-form u-pull-right" method="GET" action="/gc/flush/one/"
                         onsubmit="refreshWithDelay()">
                         <input type="hidden" name="process_name" value="{{ process_name }}" />
-                        <button type="submit" class="action_button btn-center u-pull-right" title="Flush"><i
-                                class="fa">&#xf1b8;</i><span>Flush</span></button>
+                        <button type="submit" class="action_button btn-center u-pull-right" title="Flush">
+                            <i class="fa">&#xf1b8;</i><span>Flush</span></button>
                     </form>
                 </td>
             </tr>
@@ -120,8 +118,8 @@
                 <td>Empty</td>
                 <td>Empty</td>
                 <td>
-                    <button type="submit" disabled class="action_button btn-center disabled u-pull-right"
-                        title="Flush"><i class="fa">&#xf1b8;</i><span>Flush</span></button>
+                    <button type="submit" disabled class="action_button btn-center disabled u-pull-right" title="Flush">
+                        <i class="fa">&#xf1b8;</i><span>Flush</span></button>
                 </td>
             </tr>
             {%- endif -%}
