--- a/synergy/mx/templates/supervisor_entries.html
+++ b/synergy/mx/templates/supervisor_entries.html
@@ -38,7 +38,8 @@
             <form class="table-form" method="POST" action="{{ action_url }}" onsubmit="refreshWithDelay()">
                 <input type="hidden" name="box_id" value="{{ bc_entry.box_id }}" />
                 <input type="hidden" name="process_name" value="{{ bc_entry.process_name }}" />
-                <button type="submit" class="action_button btn-center" title="{{ button_title }}"><i class="{{ button_icon }}"></i> <span>{{ button_title }}</span></button>
+                <button type="submit" class="action_button btn-center" title="{{ button_title }}">
+                    <i class="{{ button_icon }}"></i> <span>{{ button_title }}</span></button>
             </form>
         </td>
     </tr>
