--- a/synergy/mx/static/styl/colors.styl
+++ b/synergy/mx/static/styl/colors.styl
@@ -16,25 +16,32 @@ $color-15 = #ff8a65
 $color-16 = #ffffaa
 $color-17 = #d28aff
 
+// colors used in ui.styl
 $ui-color-1 = #222
-$ui-color-2 = rgba(0, 204, 255, 1)
+$ui-color-2 = $color-2
 $ui-color-3 = rgba(255,255,255,0.3)
 $ui-color-4 = #669
 $ui-color-5 = #e8edff
 $ui-color-6 = #eff2ff
 $ui-color-7 = #d0dafd
 $ui-color-8 = #ccc
-$ui-color-9 = #333
+$ui-color-9 = $color-5
 $ui-color-10 = #eee
 $ui-color-11 = #2196f3
-$ui-color-12 = #d5f5ff
-$ui-color-13 = #000
-$ui-color-14 = #c3fdb8
-$ui-color-15 = #15c200
+$ui-color-12 = $color-10
+$ui-color-14 = $color-12
+$ui-color-15 = $color-13
 $ui-color-16 = #adff2f
 $ui-color-17 = #ff4500
-$ui-color-18 = #ffffaa
-$ui-color-19 = #d28aff
+$ui-color-18 = $color-16
+$ui-color-19 = $color-17
+
+// context menu colors
+$cm-color-1 = $color-5
+$cm-color-2 = #ababaa
+$cm-color-3 = #fff
+$cm-color-4 = #3b3b3b
+$cm-color-5 = #aaa
 
 $bg-info = $color-7
 $bg-embryo = $color-10
