--- a/synergy/mx/static/styl/index.styl
+++ b/synergy/mx/static/styl/index.styl
@@ -1,6 +1,6 @@
 $body-font-size = 1.4rem
 $btn-font-size = 0.8rem
-$btn-font-size-icons = 1rem
+$btn-font-size-icons = 1.1rem
 
 @import './helpers.styl'
 @import './colors.styl'
@@ -8,3 +8,4 @@ $btn-font-size-icons = 1rem
 @import './mx.styl'
 @import './tables.styl'
 @import './checkbox.styl'
+@import './context_menu.styl'
