--- a/synergy/mx/templates/dashboard_freeruns.html
+++ b/synergy/mx/templates/dashboard_freeruns.html
@@ -8,7 +8,7 @@
 
 
 
-<div class="container u-max-full-width">
+<div class="container">
     {% import 'block_time_window_selector.html' as block_time_window %}
     {{ block_time_window.time_window_selector(details, 3) }}
     <table class="table-entries context-menu synergy-datatable" id="dashboard_table">
