--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="icon" type="image/png" href="{{ url_for('static', file='images/sy_brown.png') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/context_menu.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/index.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.min.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/alertify.css') }}">
-        <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.dataTables-1.10.20.min.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton-2.0.4.min.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize-3.0.2.min.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/index.css') }}">
 
         <!-- NOTE: adding scripts to end breaks for some reason -->
         <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script>
@@ -27,11 +26,10 @@
     {# Jinja2 variable scope visibility workaround: declared as a list so it is available to inherited templates #}
     {% set active_mx_page = [] %}
     {%- for mx_rule, mx_page_name in mx_processing_context.items() %}
-        {% set endpoint = '/' + mx_rule %}
+    {% set endpoint = '/' + mx_rule %}
     {%- if endpoint in local.request.path -%}
     <script type="text/javascript">
         let active_mx_page = "{{ endpoint|lstrip_slash|safe }}";
-        console.log(active_mx_page)
     </script>
     {% do active_mx_page.append(endpoint|lstrip_slash|safe) %}
     {%- endif -%}
@@ -55,8 +53,6 @@
                 <a class="nav-item" href="{{  url_for('scheduler_managed_entries')}}">scheduler managed entries</a>
 
                 <a class="nav-item" href="{{  url_for('scheduler_freerun_entries')}}">scheduler freerun entries</a>
-                <a class="nav-item" href="{{  url_for('scheduler_freerun_entries')}}">scheduler
-
                 <a class="nav-item" href="{{  url_for('supervisor_entries')}}">supervisor</a>
             </div>
         </div>
@@ -79,15 +75,15 @@
         <script type="text/javascript">
             // remove query parameters etc.
             function stripUrl(url) {
-                return url.split(/[?#]/)[0]
+                return url.split(/[?#]/)[ 0 ]
             }
 
             let nav = document.getElementById('navbar')
             let items = nav.getElementsByClassName('nav-item')
             for (let i = 0; i < items.length; i++) {
-                let url = stripUrl(items[i].href)
+                let url = stripUrl(items[ i ].href)
                 if (url === stripUrl(window.location.href)) {
-                    items[i].className += " active"
+                    items[ i ].className += " active"
                 }
             }
         </script>
