--- a/synergy/mx/templates/not_found.html
+++ b/synergy/mx/templates/not_found.html
@@ -1,7 +1,9 @@
 {% extends 'main_header.html' %}
 {% block body %}
-    <h2>Page Not Found</h2>
+<div class="container">
+    <h3>Page Not Found</h3>
     <p>
         The page you have requested does not exist on this server.
     </p>
+</div>
 {% endblock %}
