--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -5,10 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.min.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton-2.0.4.min.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize-3.0.2.min.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/index.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
         <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
         <title>Object Viewer</title>
