Created stylus usage guide, stylus scripts
Compiling CSS from Stylus can now be run with the stylus.sh and stylus-watch.sh scripts.

Wrote Stylus installation and usage readme.

--- a/synergy/mx/static/styl/mx.styl
+++ b/synergy/mx/static/styl/mx.styl
@@ -15,20 +15,21 @@
   .header
     height 100%
 
+// grid definitions for different trees
 .grid-row-tree_site
-  grid-template-columns min-content repeat(4, auto)
+  grid-template-columns repeat(5, min-content)
   grid-template-rows min-content auto
 
 .grid-row-tree_client
-  grid-template-columns min-content repeat(3, auto)
+  grid-template-columns repeat(4, min-content)
   grid-template-rows min-content auto
 
 .grid-row-tree_flow
-  grid-template-columns min-content auto
+  grid-template-columns repeat(2, min-content)
   grid-template-rows min-content auto
 
 .grid-row-tree_alert
-  grid-template-columns min-content auto
+  grid-template-columns repeat(2, min-content)
   grid-template-rows min-content auto
 
 .grid-header
