--- a/synergy/mx/static/css/index.css
+++ b/synergy/mx/static/css/index.css
@@ -384,19 +384,19 @@ a.nav-item.active {
   height: 100%;
 }
 .grid-row-tree_site {
-  grid-template-columns: min-content repeat(4, auto);
+  grid-template-columns: repeat(5, min-content);
   grid-template-rows: min-content auto;
 }
 .grid-row-tree_client {
-  grid-template-columns: min-content repeat(3, auto);
+  grid-template-columns: repeat(4, min-content);
   grid-template-rows: min-content auto;
 }
 .grid-row-tree_flow {
-  grid-template-columns: min-content auto;
+  grid-template-columns: repeat(2, min-content);
   grid-template-rows: min-content auto;
 }
 .grid-row-tree_alert {
-  grid-template-columns: min-content auto;
+  grid-template-columns: repeat(2, min-content);
   grid-template-rows: min-content auto;
 }
 .grid-header {
