Reviewing the MX code

--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -12,7 +12,7 @@
     method="get" id="form_time_window">
     <div class="table-filter-container">
         <div class="filter">
-            <label for="filter">filter</label>
+            <label for="table-search">filter</label>
             <input type="search" id="table-search" />
         </div>
 
